gcc/testsuite/rust/rustc/ui/closures/issue-80313-mutable-borrow-in-closure.rs
fn main() {
    let mut my_var = false;
    let callback = || {
        &mut my_var;
    };
    callback(); // { dg-error ".E0596." "" { target *-*-* } }
}

